# bot-assistant-app

./: README.md  pyproject.toml
bot/: bot.py
bot/decorators/: error_handler.py
bot/filer/: filer.py
bot/handler/: birthdays_handler.py  contacts_handler.py  notes_handler.py
bot/internal/: address.py  birthday.py  email.py  field.py  manager.py  name.py  phone.py  record.py
bot/internal/note/: note.py  notes.py  tag.py
bot/storage/: data.pkl  notes.pkl
bot/utilities/: get_args.py  parser.py  show_menu.py  upcoming_birthday.py
