[project]
name = "bot"
version = "1.0.0"
description = "Assistant bot for managing contacts and notes"
authors = [
    {name = "Artur Didur",email = "didur.art@gmail.com"},
    {name = "Oleksii Kochurov",email = "aleksei.kochuroff@icloud.com"},
    {name = "Olha Shapoval",email = "o.shapoval.dev@gmail.com"},
    {name = "Serhii Osmolovskyi",email = "Osmolovsky.s@gmail.com"},

]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.9"
dependencies = [
]

[tool.poetry.scripts]
start = "bot.bot:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
